--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>MVC With Burger!</title>
+		<title>MVC With CollegeBound!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/burgers.js"></script>
+		<script src="/assets/js/colleges.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
