--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,28 @@ body {
   margin: 0;
   height: 100%;
 }
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+#logo {
+  display: none;
+}
+#start {
+  position: absolute;
+  background-color: #eee;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+}
+#start-info {
+  display: flex;
+  flex-direction: column;
+}
 #query-container {
   position: absolute;
   background-color: #f9f9f9;
@@ -47,28 +69,44 @@ body {
 }
 #params-container {
   position: absolute;
-  background-color: #aaaaaa;
+  background-color: #eee;
   top: 60px;
   height: 60px;
   width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+#params {
+  position: absolute;
+  display: flex;
+  left: 100%;
+}
+.param {
+  background-color: #000;
+  color: #fff;
+  border-radius: 5px;
+  width: 100px;
+  margin: 10px;
+  font-size: 20px;
+  text-align: center;
 }
 #results {
   position: absolute;
-  top: 120px;
+  overflow: scroll;
+  opacity: 0;
+  top: 150px;
   width: 100%;
   height: calc(100% - 120px);
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 .result {
-  font-size: 25px;
+  font-size: 15px;
   background-color: #000000;
   border-radius: 10px;
   color: #ffffff;
   margin: 1%;
+  margin-left: 70px;
   padding: 1%;
-  width: 20%;
+  width: 40%;
 }
 #pagination {
   position: absolute;
