--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,13 +16,13 @@ body {
   position: absolute;
   background-color: #143;
   color: #fff;
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 #start-info {
   display: flex;
