--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,6 +92,17 @@ body {
   font-size: 20px;
   text-align: center;
 }
+#total-colleges {
+  position: absolute;
+  background-color: #000;
+  transform: rotate(-90deg);
+  font-size: 15px;
+  padding: 0 10px;
+  color: #fff;
+  top: 238px;
+  left: -73px;
+  width: 150px;
+}
 #results {
   position: absolute;
   overflow: scroll;
@@ -147,4 +158,18 @@ body {
 }
 #next {
   right: 0;
+}
+#page-number {
+  position: absolute;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  color: #fff;
+  height: 50px;
+  width: 100px;
+  bottom: 0;
+  left: 0;
+
 }
