--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,13 @@
+html {
+  height: 100%;
+}
 body {
   background-color: #f5f5f5;
   font-family: 'Hind', sans-serif;
   font-size: 30px;
   margin: 0;
   height: 100%;
+  overflow: hidden;
 }
 ::-webkit-scrollbar {
   width: 0;
@@ -29,11 +33,33 @@ body {
   display: flex;
   flex-direction: column;
 }
+#err-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+#err {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  font-size: 25px;
+  background-color: #fff;
+  box-shadow: 0 0 150px 1px rgba(255, 0, 0, 0.5);
+  border-radius: 20px;
+  opacity: 0;
+  width: 600px;
+  height: 400px;
+}
 #query-container {
   background-color: #fff;
   position: absolute;
   display: flex;
   align-items: center;
+  top: 0;
   height: 60px;
   width: 100%;
 }
@@ -113,10 +139,11 @@ body {
   transform: rotate(-90deg);
   font-size: 15px;
   padding: 3px 10px;
+  text-align: center;
   color: #fff;
   top: 25%;
-  right: -30px;
-  width: 70px;
+  right: -60px;
+  width: 75px;
 }
 #results {
   position: absolute;
@@ -167,6 +194,7 @@ body {
   padding: 0 10px;
   height: 100%;
   width: 40px;
+  opacity: 0;
 }
 #prev {
   left: 0;
@@ -184,7 +212,7 @@ body {
   color: #fff;
   height: 50px;
   width: 100px;
-  bottom: 0;
+  bottom: -50px;
   left: 0;
 
 }
