--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -195,12 +195,15 @@ body {
   height: 100%;
   width: 40px;
   opacity: 0;
+  cursor: pointer;
 }
 #prev {
   left: 0;
+  z-index: 2;
 }
 #next {
   right: 0;
+  z-index: 2;
 }
 #page-number {
   position: absolute;
