--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,12 +16,16 @@ body {
 #logo {
   display: none;
 }
+#logo1 {
+  width: 100px;
+  position: absolute;
+}
 #start {
   position: absolute;
   background-color: #143;
   color: #fff;
-  display: none;
-  /* display: flex; */
+  /* display: none; */
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -32,6 +36,10 @@ body {
 #start-info {
   display: flex;
   flex-direction: column;
+  width: 750px;
+  font-size: 25px;
+  text-align: center;
+  align-items: center;
 }
 #err-container {
   display: flex;
